--- a/css/style.css
+++ b/css/style.css
@@ -1,85 +1,97 @@
-:root{
-    --hover-color: #03A9F4;
-    --navigation-color: #7D7D7D;
-    --filter-color: #B4AD9E;
-    --text-color: #626262;
-}
-.container{
+/* * {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: "Playfair Display", serif;
+    font-size: 14px;
+    background-color: #FFF;
+  }
+  
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .container {
     width: 936px;
     padding: 0 15px;
     margin: 0 auto;
-}
-body{
-    font-family: 'Playfair Display', serif;
-    font-size: 14px;
-}
-.header{
+  }
+  
+  .header {
     padding-top: 71px;
     padding-bottom: 92px;
-}
-.cards-paragraph{
-    font-family: 'Ubuntu', sans-serif;
-}
-.navigation-link{
-    color: var(--navigation-color);
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 400;
-}
-.navigation-link:hover,
-.navigation-link:focus{
-     color: var(--hover-color);
-}
-.photo{
-    margin-bottom: 66px;
-}
-.cards-img{
-    margin-bottom: 62px;
-}
-.cards-paragraph{
-    color: var(--filter-color);
-    text-transform: uppercase;
-    font-weight: 300;
-    margin-bottom: 32px;
-}
-.cards-title{
-    font-size: 30px;
-    color: var(--text-color);
-    margin-bottom: 40px;
-}
-.cards-text{
-    color: var(--text-color);
-}
-.btn{
-    border: 1px solid var(--text-color);
-    background-color: white;
-    padding: 20px 49px;
-    font-family: 'Playfair Display', serif;
-    cursor: pointer;
-}
-.btn:hover,
-.btn:focus{
-    color: var(--hover-color);
-    border-color: var(--hover-color);
-}
-.navigation-list{
-    list-style: none;
+  }
+  
+  .header__list {
     display: flex;
     justify-content: space-between;
     width: 555px;
     margin: 0 auto;
-}
-.cards-list{
+  }
+  .header__link {
+    color: #7D7D7D;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  .header__link:hover, .header__link:focus {
+    color: #03A9F4;
+  }
+  
+  .photo__btn {
+    background-color: #FFF;
+    border: 1px solid #626262;
+    padding: 20px 49px;
+    font-family: "Playfair Display", serif;
+    cursor: pointer;
+  }
+  
+  .photo {
+    padding-bottom: 66px;
+  }
+  .photo__list {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-}
-.cards-item{
+    flex-wrap: wrap;
+  }
+  .photo__img {
+    margin-bottom: 62px;
+  }
+  .photo__filter {
+    color: #B4AD9E;
+    margin-bottom: 32px;
+  }
+  .photo__title {
+    font-size: 30px;
+    color: #626262;
+    margin-bottom: 40px;
+  }
+  .photo__text {
+    color: #626262;
+  }
+  .photo__item {
     margin-bottom: 130px;
     display: inline-block;
     width: 420px;
-}
-.button-wrap{
+  }
+  .photo__button-wrap {
     display: flex;
     justify-content: center;
-}
+  }
+  .photo__btn:hover, .photo__btn:focus {
+    color: #03A9F4;
+    border-color: #03A9F4;
+  }# sourceMappingURL=style.css.map */
