--- a/scss/base/_all-style.scss
+++ b/scss/base/_all-style.scss
@@ -21,7 +21,12 @@ h1, h2, h3, h4, h5, h6, p{
     padding: 0;
 }
 .container{
-    width: 936px;
+    width: 320px;
     padding: 0 15px;
     margin: 0 auto;
+}
+@media screen and (min-width:768px){
+    .container{
+        width: 768px;
+    }
 }
