--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,23 +1,44 @@
-%padding{
-    padding-top: 71px;
-    padding-bottom: 92px;
+.header {
+  margin: 0 auto;
+  @extend %padding;
+  &__link {
+  color: $navigation-color;
+  text-decoration: none;
+  text-transform: uppercase;
 }
-.header{
-    @extend %padding;
-    &__list{
-       @include flex();
-        width: 555px;
-        margin: 0 auto;
-    }
-    &__link{
-        color: $navigation-color;
-        text-decoration: none;
-        text-transform: uppercase;
-        
-    }
-    &__link:hover,
-    &__link:focus{
-        color: $hover-color;
-        
-    }
+&__link:hover,
+&__link:focus {
+  color: $hover-color;
 }
+&__list {
+  margin: 0 auto;
+  text-align: center;
+}
+}
+
+%padding {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  @media screen and (min-width:768){
+
+  }
+// .header{
+//     @extend %padding;
+//     &__list{
+//        @include flex();
+//         width: 555px;
+//         margin: 0 auto;
+//     }
+//     &__link{
+//         color: $navigation-color;
+//         text-decoration: none;
+//         text-transform: uppercase;
+
+//     }
+// &__link:hover,
+// &__link:focus{
+//     color: $hover-color;
+
+// }
+// }
