--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,4 @@
-@import 'base/colors';
-@import 'base/mixins';
+@import 'base/color';
 @import 'base/all-style';
 @import 'components/header';
 @import 'components/photo';
